--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,8 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
+    <div class="header-top">
+      <img src="../../assets/logo.png" alt="logo" width="70px">
+      <ion-searchbar animated mode='ios'></ion-searchbar>
+
+    </div>
   </ion-toolbar>
 </ion-header>
 
@@ -12,6 +14,4 @@
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
