--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,28 @@
-<button (click)='crear()'>CREAR</button>
+<div class="container-login">
+    <div class="-header">
+        <img src="../../../assets/logo.png" alt="logo">
+    </div>
+
+    <div class="login-inputs">
+        <div class="title">
+            <span>Get inspired.</span>
+            <span>Get tattooed.</span>
+        </div>
+        <div class="-button -fb">
+            <i class="fab fa-facebook-f fa-2x"></i>
+            <span>Continuar con Facebook</span>
+        </div>
+        <div class="-button -gg">
+            <i class="fab fa-google fa-2x"></i>
+            <span>Continuar con Google</span>
+        </div>
+        <div class="-button -gm">
+            <i class="fas fa-envelope fa-2x"></i>
+            <span>Continuar con Email</span>
+        </div>
+
+        <div class="terms">
+            <span>By signing up, you agree to our&nbsp;<a href="#">Terms</a>&nbsp;&&nbsp;<a href="#">Privacy Policy</a></span>
+        </div>
+    </div>
+</div>
