--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -16,7 +16,8 @@
             <i class="fab fa-google fa-2x"></i>
             <span>Continuar con Google</span>
         </div>
-        <div class="-button -gm">
+        
+        <div class="-button -gm" (click)="login('email')">
             <i class="fas fa-envelope fa-2x"></i>
             <span>Continuar con Email</span>
         </div>
