--- a/src/app/components/continue-email/continue-email.component.html
+++ b/src/app/components/continue-email/continue-email.component.html
@@ -19,5 +19,7 @@
     </div>
     <div class="-button" [ngClass]="{'-disabled': isDisabled}">{{link}}</div>
   </div>
-  <ion-spinner name="crescent" class="loader" *ngIf='showLoader'></ion-spinner>
+</div>
+<div class="loader" *ngIf='showLoader'>
+  <ion-spinner name="crescent"></ion-spinner>
 </div>
