--- a/src/app/components/continue-email/continue-email.component.scss
+++ b/src/app/components/continue-email/continue-email.component.scss
@@ -3,16 +3,19 @@
     padding: 12px 12px 24px 12px;
     display: flex;
     flex-direction: column;
-    
     .header {
         display: flex;
         width: 100%;
         justify-content: center;
+        img {
+            margin-top: -12px;
+        }
     }
     .container-mid {
         display: flex;
         flex-direction: column;
         gap: 34px;
+        margin-top: -12px;
         .title {
             font-weight: 600;
             font-size: 28px;
@@ -20,15 +23,16 @@
         .inputs {
             display: flex;
             flex-direction: column;
-            gap: 12px;
-            input {
+            gap: 16px;
+            ion-item {
                 width: 100%;
-                height: 40px;
+                height: 50px;
                 display: flex;
                 align-items: center;
                 border-radius: 4px;
                 border: 1px solid;
                 padding: 4px 10px 3px 10px;
+                border: 1px solid  #969493 ;
                 &:focus{
                     outline: none;
                 }
@@ -70,7 +74,7 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    background-color: rgba(0, 0, 0, .8);
+    background-color: rgba(0, 0, 0, .96);
     display: flex;
     justify-content: center;
     align-items: center;
