--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -22,11 +22,11 @@
                 <span>Estudio</span>                
             </div>
         </div>
-        <div class="-button -fb">
+        <div class="-button -fb" (click)='loginWithFacebook()'>
             <i class="fab fa-facebook-f fa-2x"></i>
             <span>Continuar con Facebook</span>
         </div>
-        <div class="-button -gg">
+        <div class="-button -gg" (click)='loginWithGoogle()'>
             <i class="fab fa-google fa-2x"></i>
             <span>Continuar con Google</span>
         </div>
