--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,5 +9,5 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
- <button (click)='test()'>sadlkaldskaa</button>
+  <button (click)='logout()'>LOG OUT</button>
 </ion-content>
