Agrego maps api

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,23 +2,19 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1" color='danger'>
-      <ion-icon name="home-sharp"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon name="home-sharp" size='large'></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="images"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-icon name="images" size='large'></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="chatbubble-outline"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-icon name="chatbubble-outline" size='large'></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="tab4">
-      <ion-icon name="person-circle-outline"></ion-icon>
-      <ion-label>Tab 4</ion-label>
+      <ion-icon name="person-circle-outline" size='large'></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
 
