--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" class="ion-no-border">
   <ion-toolbar>
     <div class="header-top">
       <img src="../../assets/logo.png" alt="logo" width="70px">
@@ -9,6 +9,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <input type="text" #search>
   <button (click)='logout()'>LOG OUT</button>
   <app-card></app-card>
 </ion-content>
