--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,12 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+ion-tab-bar {
+    border-top: 0;
+    padding-bottom: 4px;
+    ion-tab-button {
+        color: #202125;
+    }
+}
