--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -2,7 +2,35 @@
 ion-header::after {
     height: 0px;
 }
-
+.input-icono {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding-left: 20px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    border-radius: 100px;
+    background-color: #202125;
+    margin-left: 4px;
+    margin-top: -10px;
+    ion-icon {
+        margin-right: 8px;
+        font-size: 32px;
+        color: white;
+        transform: rotate(90deg);
+    }
+  }
+  .input-icono input {
+    font-size: 0.9em;
+    border: none;
+    background-color: #202125;
+    height: 32px;
+    color: white;
+  }
+  .input-icono input:focus {
+    outline: none;
+  }
 .header-top {
     display: flex;
     align-items: center;
