--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -3,13 +3,46 @@
     flex-direction: column;
     border: 1px solid rgb(102, 102, 102);
     margin: 12px 20px;
-    border-radius: 6px;
+    border-radius: 16px;
+    .header {
+        justify-content: space-between!important;
+        .profile {
+            display: flex;
+            gap: 10px;
+            .info {
+                justify-content: center;
+            }
+            img {
+                width: 40px;
+                height: 40px;
+            }
+        }
+        .save-profile {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px;
+        }
+    }
     .content{
         display: flex;
         flex-direction: column;
         overflow: hidden;
         min-height: 100px;
         position: relative;
+        
+        .img-card {
+            min-width: 100%; 
+            display: flex; 
+            height: 100%; 
+            max-height: 200px; 
+            transition-duration: 2s;
+
+            img {
+                border-radius: 0 0 16px 16px;
+            }
+        }
+
         .dots {
             display: flex;
             gap: 8px;
@@ -21,11 +54,11 @@
             bottom: 12px;
             .dot {
                 border-radius: 4px;
-                width: 14px;
-                height: 10px;
-                border: 1px solid red;
+                width: 8px;
+                height: 8px;
+                border: 1px solid #fff;
                 &.-selected {
-                    background-color: red;
+                    background-color: #fff;
                 }
             }
         }
@@ -37,7 +70,7 @@
         padding: 8px 20px;
         border-bottom: 1px solid rgb(102, 102, 102);
         img {
-            border-radius: 99999px;
+            border-radius: 100%;
         }
         .info {
             display: flex;
