--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -6,9 +6,12 @@ ion-header::after {
 .header-top {
     display: flex;
     align-items: center;
-    padding: 0px 12px 12px 12px;
+    padding: 5px;
     ion-searchbar {
         padding-top: 8px;
-        padding-inline-end: 0px !important;
+    }
+
+    .filters {
+        font-size: 25px;
     }
 }
