--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,13 +2,13 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1" color='danger'>
-      <ion-icon name="home-sharp"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon name="search-outline"></ion-icon>
+      <ion-label>Encontrar</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="images"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-icon name="planet-outline"></ion-icon>
+      <ion-label>Explorink</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
