--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -2,8 +2,9 @@
   <ion-toolbar>
     <div class="header-top">
       <img src="../../assets/logo.png" alt="logo" width="70px">
-      <ion-searchbar animated mode='ios'></ion-searchbar>
-      <div class="filters">
+      <div class="input-icono">
+        <ion-icon class="-search" name="search"></ion-icon>
+        <input type="text" name="input" #search>
         <ion-icon name="filter-outline"></ion-icon>
       </div>
     </div>
