Cambio el color principal

--- a/src/global.scss
+++ b/src/global.scss
@@ -30,6 +30,6 @@ ion-tab-bar {
     border-top: 0;
     padding-bottom: 4px;
     ion-tab-button {
-        color: #202125;
+        color: #333C4B;
     }
 }
