--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -7,11 +7,10 @@ ion-header::after {
     display: flex;
     align-items: center;
     width: 100%;
-    padding-left: 20px;
     padding-bottom: 5px;
     padding-top: 5px;
     border-radius: 100px;
-    background-color: #202125;
+    background-color: #333C4B;
     margin-left: 4px;
     ion-icon {
         margin-right: 8px;
@@ -25,7 +24,7 @@ ion-header::after {
   .input-icono input {
     font-size: 0.9em;
     border: none;
-    background-color: #202125;
+    background-color: #333C4B;
     height: 32px;
     color: white;
   }
