--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -7,7 +7,7 @@
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #3171e0;
   --ion-color-primary-tint: #4c8dff;
-  --bg-01: #202125;
+  --bg-01: #333C4B;
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
   --ion-color-secondary-rgb: 61, 194, 255;
