--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -11,7 +11,7 @@
   --ion-color-primary-shade: #3171e0;
   --ion-color-primary-tint: #4c8dff;
 
-  --bg-01: #202125;
+  --bg-01: #333C4B;
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
