--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -14,4 +14,6 @@
 <ion-content [fullscreen]="true">
   <!-- <button (click)='logout()'>LOG OUT</button> -->
   <app-card></app-card>
+  <app-card></app-card>
+  <app-card></app-card>
 </ion-content>
