--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -1,9 +1,10 @@
 .container {
     display: flex;
     flex-direction: column;
-    border: 1px solid rgb(102, 102, 102);
+    border: 1px solid white;
     margin: 12px 20px;
     border-radius: 16px;
+    background-color: white;
     .header {
         justify-content: space-between!important;
         .profile {
