--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -12,8 +12,5 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <!-- <button (click)='logout()'>LOG OUT</button> -->
-  <app-card></app-card>
-  <app-card></app-card>
-  <app-card></app-card>
+  <app-card *ngFor='let publication of publications' [user]='publication'></app-card>
 </ion-content>
