--- a/src/app/components/tatuador-perfil/tatuador-perfil.component.scss
+++ b/src/app/components/tatuador-perfil/tatuador-perfil.component.scss
@@ -60,6 +60,7 @@
     flex-wrap:  wrap;
     gap: 8px;
     padding: 12px;
+    overflow-y: scroll;
     img {
         width: calc(50% - 4px);
         height: auto;
